--- a/web/resources/css/jsfcrud.css
+++ b/web/resources/css/jsfcrud.css
@@ -65,14 +65,14 @@ form.jsfcrud_list_form td, td td {
 }
 
 tr.jsfcrud_odd_row {
-    background-color: #fefeff;
-    color: #4e6a71;
+    background-color: #e36b07;
+    color: #444444;
 }
 
 
 tr.jsfcrud_even_row {
-    background-color: #eff5fa;
-    color: #4e6a71;
+    background-color: #F7F564;
+    color: #444444;
 }
 
 #busyImage {
