se modifico el estilo de subir imagen en categoria

--- a/web/resources/css/estilos.css
+++ b/web/resources/css/estilos.css
@@ -141,6 +141,15 @@ body{
     padding: 8px;
 }
 
+.anchoImagen{
+    width: 20px;
+    
+}
+
+.anchoImagenLabel{
+    margin-left: 86px;
+}
+
 .title{
     text-align: center;
     padding-top: 50px;
