--- a/web/resources/css/estilos.css
+++ b/web/resources/css/estilos.css
@@ -12,7 +12,20 @@ body{
     //background-image: url('../img/cielo_azul.jpg');
 }
 */
+/*
+.ui-fileupload-buttonbar {
+    background: transparent;
+    border: none;
+}
 
+.ui-fileupload-content {
+    display: none;
+}
+
+.ui-fileupload-buttonbar .ui-fileupload-choose {
+    background-color: rgba(142, 103, 64, 0.98);
+}
+*/
 .iconoAdicionar {
     background-image: url(../imagenes/adicionar.png);
 }
